// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_162"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="1"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            1
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Badge
      </p>
    </section>
  </div>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_163"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="1"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            1
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        1-Digit
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_164"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="21"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            21
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        2-Digit
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_165"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="321"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            321
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        3-Digit
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_166"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="4321"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            4321
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        4-Digit
      </p>
    </section>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_167"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="9+"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            9+
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Max 10
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_168"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="99+"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            99+
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Max 100
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_169"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="999+"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            999+
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Max 1000
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_170"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="9999+"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            9999+
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Max 10k
      </p>
    </section>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_171"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 dfyPSx Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="Info"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Info
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Info
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_172"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 bNyfPl Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="Success"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Success
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Success
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_173"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 fZyEaF Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="Warning"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Warning
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Warning
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_174"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="Alert"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            Alert
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Alert
      </p>
    </section>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_175"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 cOIjcW Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 geNtsc"
            color="neutral20"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Info
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_176"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hwvtuW Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 geNtsc"
            color="neutral20"
            data-icon="check"
            data-prefix="far"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Complete
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_177"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 cOuvTm Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 geNtsc"
            color="neutral20"
            data-icon="question"
            data-prefix="far"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 384 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M199.65 0C125.625 0 69.665 30.187 27.21 92.51c-19.17 28.15-12.94 66.3 14.17 86.86l36.73 27.85c10.81 8.2 24.19 12.79 37.74 12.96-11.84 19-17.82 40.61-17.82 64.55v11.43c0 16.38 6.2 31.34 16.38 42.65C97.99 357.2 88 381.45 88 408c0 57.35 46.65 104 104 104s104-46.65 104-104c0-26.55-9.99-50.8-26.41-69.19 8.66-9.62 14.43-21.87 15.97-35.38 28.287-16.853 96-48.895 96-138.21C381.56 71.151 290.539 0 199.65 0zM192 464c-30.88 0-56-25.12-56-56 0-30.873 25.118-56 56-56 30.887 0 56 25.132 56 56 0 30.88-25.12 56-56 56zm45.97-176.21v8.37c0 8.788-7.131 15.84-15.84 15.84h-60.26c-8.708 0-15.84-7.051-15.84-15.84v-11.43c0-47.18 35.77-66.04 62.81-81.2 23.18-13 37.39-21.83 37.39-39.04 0-22.77-29.04-37.88-52.52-37.88-30.61 0-44.74 14.49-64.6 39.56-5.365 6.771-15.157 8.01-22 2.8l-36.73-27.85c-6.74-5.11-8.25-14.6-3.49-21.59C98.08 73.73 137.8 48 199.65 48c64.77 0 133.91 50.56 133.91 117.22 0 88.51-95.59 89.87-95.59 122.57z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Help
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_178"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 eIVnur Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label={null}
          onClick={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-exclamation fa-w-6 Icon__StyledIcon-sc-1oa9m1v-1 geNtsc"
            color="neutral20"
            data-icon="exclamation"
            data-prefix="fas"
            focusable="false"
            fontSize="0.875em"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M176 432c0 44.112-35.888 80-80 80s-80-35.888-80-80 35.888-80 80-80 80 35.888 80 80zM25.26 25.199l13.6 272C39.499 309.972 50.041 320 62.83 320h66.34c12.789 0 23.331-10.028 23.97-22.801l13.6-272C167.425 11.49 156.496 0 142.77 0H49.23C35.504 0 24.575 11.49 25.26 25.199z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Alert
      </p>
    </section>
  </div>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eVaBUs"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_179"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 lelMes"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="1"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            1
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Top-Left
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_180"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 hZUvTs"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="1"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            1
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Bottom-Left
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_181"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 bwpbjk"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="1"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            1
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Top-Right
      </p>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 XGpoL Card__StyledCardWrapper-sc-1g3s676-3"
    href={null}
    id="storyshots_182"
    media=""
    onClick={null}
    placeholder="{ Card }"
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 cmWTgJ"
      id={null}
      onClick={null}
    >
      <div
        className="Badge__BadgeContainer-sc-1rnxbq0-0 lifpwc"
        id={null}
      >
        <span
          className="Tag__TagContainer-sc-128kb3h-0 hhtcJs Badge__StyledBadge-sc-1rnxbq0-1 dXBJRt"
          id={null}
          label="1"
          onClick={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 bqRbcF"
            cursor="default"
            fontSize="0.875rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
            onClick={null}
          >
            1
          </label>
        </span>
      </div>
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIhRyd"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Bottom-Right
      </p>
    </section>
  </div>
</section>
`;
